# ForgeFlow

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SESSION_START.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
frontend/: package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/providers/: WalletContextProvider.tsx
frontend/components/: DelegationControls.tsx  MarketPanel.tsx  StatusBanner.tsx  StrategyForm.tsx
frontend/lib/: constants.ts  delegation.ts  flashTrade.ts
frontend/lib/__tests__/: strategy-logic.test.ts
programs/flashforge/: Anchor.toml  Cargo.toml
programs/flashforge/src/: lib.rs
scripts/: advance-simulation.ts  simulate-strategy.ts  test-magicblock-flow.ts
shared/: index.ts  package.json
